--- a/package.json
+++ b/package.json
@@ -12,26 +12,27 @@
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
     "bootstrap": "^5.1.3",
+    "next": "^12.1.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "dev": "next dev",
+    "build": "next build && next export",
+    "start": "next start",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d out"
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+      "next"
+    ],
+    "rules": {
+      "@next/next/no-img-element": "off"
+    }
   },
   "browserslist": {
     "production": [
@@ -47,6 +48,8 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
+    "eslint": "^8.11.0",
+    "eslint-config-next": "^12.1.0",
     "gh-pages": "^3.2.3"
   }
 }
